--- a/.github/workflows/cml.yml
+++ b/.github/workflows/cml.yml
@@ -1,19 +1,17 @@
 name : ium-train-cml
 on : [push]
 jobs:
-	run:
-		runs-on: [ubuntu-latest]
-		steps:
-			- uses: actions/checkout@v3
-			- uses: actions/setup-python@v4
-			with:
-				python-version: '3.x'
-			- uses: iterative/setup-cml@v1
-			- name: Training and evalutation
-			env:
-				REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-			run: |
-				pip install -r requirements.txt
-				python ml_training.py
-				cat train_evaluation.txt >> report.md
-				cml-send-commend report.md
+    run:
+        runs-on: [ubuntu-latest]
+        steps:
+        - uses: actions/checkout@v3
+        - uses: actions/setup-python@v3.1.2
+        - uses: iterative/setup-cml@v1
+        - name: Training and evalutation
+          env:
+            REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          run: |
+            pip install -r requirements.txt
+            python ml_training.py
+            cat train_evaluation.txt >> report.md
+            cml-send-comment report.md
